--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "4erk/_____",
+    "name": "neurofoxpro/swoole-runner-http",
     "description": "description",
     "minimum-stability": "stable",
     "license": "proprietary",
@@ -11,7 +11,18 @@
         }
     ],
     "require": {
-        "php": "^8.3"
+        "php": "^8.3",
+        "psr/http-factory": "^1.0",
+        "psr/http-message": "^1.0|^2.0 ",
+        "psr/log": "^3.0",
+        "yiisoft/config": "^1.1",
+        "yiisoft/definitions": "^1.0|^2.0|^3.0",
+        "yiisoft/di": "^1.0",
+        "yiisoft/error-handler": "^3.0",
+        "yiisoft/friendly-exception": "^1.1",
+        "yiisoft/http": "^1.2",
+        "yiisoft/yii-http": "^1.0",
+        "yiisoft/yii-runner": "^2.2"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.13.0",
@@ -23,19 +34,25 @@
     },
     "autoload": {
         "psr-4": {
-            "_____\\": "src"
+            "NeuroFoxPro\\Swoole\\Runner\\Http\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "_____\\Tests\\": "tests"
+            "NeuroFoxPro\\Swoole\\Runner\\Http\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "config-plugin-options": {
+            "build-merge-plan": false
         }
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "infection/extension-installer": true,
-            "composer/package-versions-deprecated": true
+            "composer/package-versions-deprecated": true,
+            "yiisoft/config": true
         }
     },
     "scripts": {
